Update : update SplashScreen screen, update loading in AdminRoomScreen.kt

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.ReservationApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.MySplashScreen" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/primary</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/avd_logo_basic</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.ReservationApp</item>
+    </style>
+
+    <style name="Theme.ReservationApp" parent="android:Theme.Material.Light.NoActionBar">
+<!--        <item name="android:windowIsTranslucent">true</item>-->
+    </style>
+
 </resources>
